update : Knn.h - New AddData function, Knn.cc, Tag2Vec.h - data structure update for jaccard metric, Tag2Vec.cc - New split function | test : Knn + Tag2Vec Test OK

--- a/Tag2Vec/Makefile
+++ b/Tag2Vec/Makefile
@@ -3,7 +3,7 @@ CC = g++
 CFLAGS = -std=c++11 -g 
 
 TARGET = Tag2Vec_test.out
-OBJS = Tag2Vec_test.o Tag2Vec.o
+OBJS = Tag2Vec_test.o Tag2Vec.o Knn.o
 
 $(TARGET) : $(OBJS)
 	$(CC) $(CFLAGS) -o $@ $^
@@ -12,6 +12,9 @@ Tag2Vec_test.o : Tag2Vec_test.cc
 	$(CC) $(CFLAGS) -c $<
 
 Tag2Vec.o : Tag2Vec.cc
+	$(CC) $(CFLAGS) -c $<
+
+Knn.o : ../Knn/Knn.cc
 	$(CC) $(CFLAGS) -c $<
 
 clean :
