--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,8 +7,13 @@ project(${ProjectId} C CXX)
 set (CMAKE_CXX_STANDARD 11)
 cmake_minimum_required(VERSION 2.8)
 find_package( OpenCV REQUIRED )
- 
-file(GLOB SOURCES  *.cpp)
- 
+include_directories(~/Kiwi/build)
+
+
+file(GLOB SOURCES */*.cc *.cc)
+
+
 add_executable(${PROJECT_NAME} ${SOURCES}  )
 target_link_libraries( ${PROJECT_NAME} ${OpenCV_LIBS} )
+target_link_libraries( ${PROJECT_NAME} kiwi )
+
